# skills

./: .dprint.jsonc  .envrc  .gitignore  .rumdl.toml  AGENTS.md  README.md  pyproject.toml  skills-help.md
.github/workflows/: sync-vendored-docs.yml
.opencode/: opencode.jsonc
.zed/: settings.json
github-script-workspace/iteration-1/eval-0/: eval_metadata.json
github-script-workspace/iteration-1/eval-1/: eval_metadata.json
github-script-workspace/iteration-1/eval-2/: eval_metadata.json
scripts/: maintain.sh
scripts/eval/: README.md  run_eval.py  schema.json
skills/: AGENTS.md
skills/build-skill/: AGENTS.md  SKILL.md
skills/build-skill/references/: anatomy.md  bundled-resources.md  frontmatter.md  gotchas.md  patterns.md  progressive-disclosure.md  review-checklist.md
skills/build-skill/scripts/: init_skill.sh  package_skill.sh  validate_skill.sh
skills/changelog-writing/: SKILL.md
skills/changelog-writing/references/: example.md
skills/commit/: SKILL.md
skills/commit/references/: amend.md  malformed-message-recovery.md
skills/discoveries-writing/: SKILL.md
skills/dprint-plugin-creator/: SKILL.md
skills/ezelsbruggen-schrijven/: SKILL.md
skills/github-docker-action/: SKILL.md
skills/github-script/: AGENTS.md  SKILL.md
skills/github-service-containers/: SKILL.md
skills/index-knowledge/: SKILL.md
skills/lightning/: .gitignore  AGENTS.md  SKILL.md  ch12-14_modeling_distant_em_upper_atmo.md
skills/statute-proxy/: SKILL.md
skills/threlte/: AGENTS.md  SKILL.md
skills/twoslash/: AGENTS.md  SKILL.md  example-docs.txt
skills/uv-versioning/: SKILL.md
skills/xstate/: AGENTS.md  SKILL.md
skills/zed-extension-creator/: SKILL.md
skills/zed-extension-creator/assets/templates/: Cargo.toml  extension.toml  language-config.toml  language-server-lib.rs
skills/zod/: AGENTS.md  SKILL.md
(+591 files in other folders)
