[project]
name = "scripts"
version = "0.1.0"
description = "A collection of utility scripts for various tasks..."
requires-python = ">=3.14"
dependencies = ["jsonschema>=4.26.0"]

[project.scripts]
run-eval = "scripts.eval.run_eval:main"

[dependency-groups]
dev = ["basedpyright>=1.39.3", "ruff>=0.15.12", "ty>=0.0.34"]

[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[tool.ruff]
preview = true

[tool.uv.build-backend]
module-name = "scripts"
module-root = ""
